# token-metadata-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
