[package]
name = "token-metadata-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
solana-sdk = "2.2"
solana-client = "2.2"
spl-token = "7"
mpl-token-metadata = "5"
borsh = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
